Fixed more z-index issues with the search scene during route transitions

--- a/client/src/components/scenes/SearchScene/SearchScene.scss
+++ b/client/src/components/scenes/SearchScene/SearchScene.scss
@@ -163,7 +163,5 @@ $mobile-size: 130vw;
                 opacity: 1;
             }
         }
-
-        z-index: 100;
     }
 }
